CI: enable running unit tests in CI for S3

--- a/.gitlab/ci/build.yml
+++ b/.gitlab/ci/build.yml
@@ -289,6 +289,13 @@ build_component_ut_esp32s2:
   variables:
     IDF_TARGET: esp32s2
 
+build_component_ut_esp32s3:
+  extends:
+    - .build_component_ut_template
+    - .rules:build:component_ut-esp32s3
+  variables:
+    IDF_TARGET: esp32s3
+
 build_component_ut_esp32c3:
   extends:
     - .build_component_ut_template
