--- a/.gitlab/ci/assign-test.yml
+++ b/.gitlab/ci/assign-test.yml
@@ -10,6 +10,7 @@ assign_test:
     - build_ssc_esp32
     - build_esp_idf_tests_cmake_esp32
     - build_esp_idf_tests_cmake_esp32s2
+    - build_esp_idf_tests_cmake_esp32s3
     - build_esp_idf_tests_cmake_esp32c3
   variables:
     SUBMODULES_TO_FETCH: "components/esptool_py/esptool"
@@ -58,6 +59,7 @@ update_test_cases:
   needs:
     - build_esp_idf_tests_cmake_esp32
     - build_esp_idf_tests_cmake_esp32s2
+    - build_esp_idf_tests_cmake_esp32s3
     - build_esp_idf_tests_cmake_esp32c3
   artifacts:
     when: always
