--- a/components/esp32h2/Kconfig
+++ b/components/esp32h2/Kconfig
@@ -1,54 +1,48 @@
-menu "ESP32C3-Specific"
-    visible if IDF_TARGET_ESP32C3
+menu "ESP32H2-Specific"
+    visible if IDF_TARGET_ESP32H2
 
-    choice ESP32C3_DEFAULT_CPU_FREQ_MHZ
+    choice ESP32H2_DEFAULT_CPU_FREQ_MHZ
         prompt "CPU frequency"
-        default ESP32C3_DEFAULT_CPU_FREQ_40 if IDF_ENV_FPGA
-        default ESP32C3_DEFAULT_CPU_FREQ_160 if !IDF_ENV_FPGA
+        default ESP32H2_DEFAULT_CPU_FREQ_64 if IDF_ENV_FPGA
+        default ESP32H2_DEFAULT_CPU_FREQ_96 if !IDF_ENV_FPGA
         help
             CPU frequency to be set on application startup.
 
-        config ESP32C3_DEFAULT_CPU_FREQ_40
-            bool "40 MHz"
-            depends on IDF_ENV_FPGA
-        config ESP32C3_DEFAULT_CPU_FREQ_80
-            bool "80 MHz"
-        config ESP32C3_DEFAULT_CPU_FREQ_160
-            bool "160 MHz"
+        config ESP32H2_DEFAULT_CPU_FREQ_16
+            bool "16 MHz"
+        config ESP32H2_DEFAULT_CPU_FREQ_32
+            bool "32 MHz"
+        config ESP32H2_DEFAULT_CPU_FREQ_64
+            bool "64 MHz"
+        config ESP32H2_DEFAULT_CPU_FREQ_96
+            bool "96 MHz"
+            depends on !IDF_ENV_FPGA
     endchoice
 
-    config ESP32C3_DEFAULT_CPU_FREQ_MHZ
+    config ESP32H2_DEFAULT_CPU_FREQ_MHZ
         int
-        default 40 if ESP32C3_DEFAULT_CPU_FREQ_40
-        default 80 if ESP32C3_DEFAULT_CPU_FREQ_80
-        default 160 if ESP32C3_DEFAULT_CPU_FREQ_160
+        default 16 if ESP32H2_DEFAULT_CPU_FREQ_16
+        default 32 if ESP32H2_DEFAULT_CPU_FREQ_32
+        default 64 if ESP32H2_DEFAULT_CPU_FREQ_64
+        default 96 if ESP32H2_DEFAULT_CPU_FREQ_96
 
-    choice ESP32C3_REV_MIN
-        prompt "Minimum Supported ESP32-C3 Revision"
-        default ESP32C3_REV_MIN_3
+    choice ESP32H2_REV_MIN
+        prompt "Minimum Supported ESP32-H2 Revision"
+        default ESP32H2_REV_MIN_0
         help
             Minimum revision that ESP-IDF would support.
 
             Only supporting higher chip revisions can reduce binary size.
 
-        config ESP32C3_REV_MIN_0
+        config ESP32H2_REV_MIN_0
             bool "Rev 0"
-        config ESP32C3_REV_MIN_1
-            bool "Rev 1"
-        config ESP32C3_REV_MIN_2
-            bool "Rev 2"
-        config ESP32C3_REV_MIN_3
-            bool "Rev 3"
     endchoice
 
-    config ESP32C3_REV_MIN
+    config ESP32H2_REV_MIN
         int
-        default 0 if ESP32C3_REV_MIN_0
-        default 1 if ESP32C3_REV_MIN_1
-        default 2 if ESP32C3_REV_MIN_2
-        default 3 if ESP32C3_REV_MIN_3
+        default 0 if ESP32H2_REV_MIN_0
 
-    config ESP32C3_DEBUG_OCDAWARE
+    config ESP32H2_DEBUG_OCDAWARE
         bool "Make exception and panic handlers JTAG/OCD aware"
         default y
         select FREERTOS_DEBUG_OCDAWARE
@@ -56,15 +50,15 @@ menu "ESP32C3-Specific"
             The FreeRTOS panic and unhandled exception handers can detect a JTAG OCD debugger and
             instead of panicking, have the debugger stop on the offending instruction.
 
-    config ESP32C3_DEBUG_STUBS_ENABLE
+    config ESP32H2_DEBUG_STUBS_ENABLE
         bool "OpenOCD debug stubs"
         default COMPILER_OPTIMIZATION_LEVEL_DEBUG
-        depends on !ESP32C3_TRAX
+        depends on !ESP32H2_TRAX
         help
             Debug stubs are used by OpenOCD to execute pre-compiled onboard code which does some useful debugging,
             e.g. GCOV data dump.
 
-    config ESP32C3_BROWNOUT_DET
+    config ESP32H2_BROWNOUT_DET
         bool "Hardware brownout detect & reset"
         default y
         help
@@ -72,10 +66,10 @@ menu "ESP32C3-Specific"
             a specific value. If this happens, it will reset the chip in order to prevent unintended
             behaviour.
 
-    choice ESP32C3_BROWNOUT_DET_LVL_SEL
+    choice ESP32H2_BROWNOUT_DET_LVL_SEL
         prompt "Brownout voltage level"
-        depends on ESP32C3_BROWNOUT_DET
-        default ESP32C3_BROWNOUT_DET_LVL_SEL_7
+        depends on ESP32H2_BROWNOUT_DET
+        default ESP32H2_BROWNOUT_DET_LVL_SEL_7
         help
             The brownout detector will reset the chip when the supply voltage is approximately
             below this level. Note that there may be some variation of brownout voltage level
@@ -83,32 +77,32 @@ menu "ESP32C3-Specific"
 
             #The voltage levels here are estimates, more work needs to be done to figure out the exact voltages
             #of the brownout threshold levels.
-        config ESP32C3_BROWNOUT_DET_LVL_SEL_7
+        config ESP32H2_BROWNOUT_DET_LVL_SEL_7
             bool "2.51V"
-        config ESP32C3_BROWNOUT_DET_LVL_SEL_6
+        config ESP32H2_BROWNOUT_DET_LVL_SEL_6
             bool "2.64V"
-        config ESP32C3_BROWNOUT_DET_LVL_SEL_5
+        config ESP32H2_BROWNOUT_DET_LVL_SEL_5
             bool "2.76V"
-        config ESP32C3_BROWNOUT_DET_LVL_SEL_4
+        config ESP32H2_BROWNOUT_DET_LVL_SEL_4
             bool "2.92V"
-        config ESP32C3_BROWNOUT_DET_LVL_SEL_3
+        config ESP32H2_BROWNOUT_DET_LVL_SEL_3
             bool "3.10V"
-        config ESP32C3_BROWNOUT_DET_LVL_SEL_2
+        config ESP32H2_BROWNOUT_DET_LVL_SEL_2
             bool "3.27V"
     endchoice
 
-    config ESP32C3_BROWNOUT_DET_LVL
+    config ESP32H2_BROWNOUT_DET_LVL
         int
-        default 2 if ESP32C3_BROWNOUT_DET_LVL_SEL_2
-        default 3 if ESP32C3_BROWNOUT_DET_LVL_SEL_3
-        default 4 if ESP32C3_BROWNOUT_DET_LVL_SEL_4
-        default 5 if ESP32C3_BROWNOUT_DET_LVL_SEL_5
-        default 6 if ESP32C3_BROWNOUT_DET_LVL_SEL_6
-        default 7 if ESP32C3_BROWNOUT_DET_LVL_SEL_7
+        default 2 if ESP32H2_BROWNOUT_DET_LVL_SEL_2
+        default 3 if ESP32H2_BROWNOUT_DET_LVL_SEL_3
+        default 4 if ESP32H2_BROWNOUT_DET_LVL_SEL_4
+        default 5 if ESP32H2_BROWNOUT_DET_LVL_SEL_5
+        default 6 if ESP32H2_BROWNOUT_DET_LVL_SEL_6
+        default 7 if ESP32H2_BROWNOUT_DET_LVL_SEL_7
 
-    choice ESP32C3_TIME_SYSCALL
+    choice ESP32H2_TIME_SYSCALL
         prompt "Timers used for gettimeofday function"
-        default ESP32C3_TIME_SYSCALL_USE_RTC_SYSTIMER
+        default ESP32H2_TIME_SYSCALL_USE_RTC_SYSTIMER
         help
             This setting defines which hardware timers are used to
             implement 'gettimeofday' and 'time' functions in C library.
@@ -128,44 +122,43 @@ menu "ESP32C3-Specific"
             - When RTC is used for timekeeping, two RTC_STORE registers are
               used to keep time in deep sleep mode.
 
-        config ESP32C3_TIME_SYSCALL_USE_RTC_SYSTIMER
+        config ESP32H2_TIME_SYSCALL_USE_RTC_SYSTIMER
             bool "RTC and high-resolution timer"
             select ESP_TIME_FUNCS_USE_RTC_TIMER
             select ESP_TIME_FUNCS_USE_ESP_TIMER
-        config ESP32C3_TIME_SYSCALL_USE_RTC
+        config ESP32H2_TIME_SYSCALL_USE_RTC
             bool "RTC"
             select ESP_TIME_FUNCS_USE_RTC_TIMER
-        config ESP32C3_TIME_SYSCALL_USE_SYSTIMER
+        config ESP32H2_TIME_SYSCALL_USE_SYSTIMER
             bool "High-resolution timer"
             select ESP_TIME_FUNCS_USE_ESP_TIMER
-        config ESP32C3_TIME_SYSCALL_USE_NONE
+        config ESP32H2_TIME_SYSCALL_USE_NONE
             bool "None"
             select ESP_TIME_FUNCS_USE_NONE
     endchoice
 
-    choice ESP32C3_RTC_CLK_SRC
+    choice ESP32H2_RTC_CLK_SRC
         prompt "RTC clock source"
-        default ESP32C3_RTC_CLK_SRC_INT_RC
+        default ESP32H2_RTC_CLK_SRC_INT_RC
         help
             Choose which clock is used as RTC clock source.
 
-        config ESP32C3_RTC_CLK_SRC_INT_RC
+        config ESP32H2_RTC_CLK_SRC_INT_RC
             bool "Internal 150kHz RC oscillator"
-        config ESP32C3_RTC_CLK_SRC_EXT_CRYS
+        config ESP32H2_RTC_CLK_SRC_EXT_CRYS
             bool "External 32kHz crystal"
             select ESP_SYSTEM_RTC_EXT_XTAL
-        config ESP32C3_RTC_CLK_SRC_EXT_OSC
+        config ESP32H2_RTC_CLK_SRC_EXT_OSC
             bool "External 32kHz oscillator at 32K_XP pin"
-        config ESP32C3_RTC_CLK_SRC_INT_8MD256
+        config ESP32H2_RTC_CLK_SRC_INT_8MD256
             bool "Internal 8MHz oscillator, divided by 256 (~32kHz)"
     endchoice
 
-    config ESP32C3_RTC_CLK_CAL_CYCLES
+    config ESP32H2_RTC_CLK_CAL_CYCLES
         int "Number of cycles for RTC_SLOW_CLK calibration"
-        default 3000 if ESP32C3_RTC_CLK_SRC_EXT_CRYS || ESP32C3_RTC_CLK_SRC_EXT_OSC || ESP32C3_RTC_CLK_SRC_INT_8MD256
-        default 1024 if ESP32C3_RTC_CLK_SRC_INT_RC
-        range 0 27000 if ESP32C3_RTC_CLK_SRC_EXT_CRYS || ESP32C3_RTC_CLK_SRC_EXT_OSC || ESP32C3_RTC_CLK_SRC_INT_8MD256
-        range 0 32766 if ESP32C3_RTC_CLK_SRC_INT_RC
+        default 3000 if ESP32H2_RTC_CLK_SRC_EXT_CRYS || ESP32H2_RTC_CLK_SRC_EXT_OSC || ESP32H2_RTC_CLK_SRC_INT_8MD256
+        default 576 if ESP32H2_RTC_CLK_SRC_INT_RC
+        range 0 125000
         help
             When the startup code initializes RTC_SLOW_CLK, it can perform
             calibration by comparing the RTC_SLOW_CLK frequency with main XTAL
@@ -182,7 +175,7 @@ menu "ESP32C3-Specific"
               In case more value will help improve the definition of the launch of the crystal.
               If the crystal could not start, it will be switched to internal RC.
 
-    config ESP32C3_NO_BLOBS
+    config ESP32H2_NO_BLOBS
         bool "No Binary Blobs"
         depends on !BT_ENABLED
         default n
@@ -190,12 +183,12 @@ menu "ESP32C3-Specific"
             If enabled, this disables the linking of binary libraries in the application build. Note
             that after enabling this Wi-Fi/Bluetooth will not work.
 
-    config ESP32C3_LIGHTSLEEP_GPIO_RESET_WORKAROUND
+    config ESP32H2_LIGHTSLEEP_GPIO_RESET_WORKAROUND
         bool "light sleep GPIO reset workaround"
         default y
         select PM_SLP_DISABLE_GPIO if FREERTOS_USE_TICKLESS_IDLE
         help
-            ESP32C3 will reset at wake-up if GPIO is received a small electrostatic pulse during
+            ESP32H2 will reset at wake-up if GPIO is received a small electrostatic pulse during
             light sleep, with specific condition
 
             - GPIO needs to be configured as input-mode only
@@ -209,4 +202,4 @@ menu "ESP32C3-Specific"
             This option provides a software workaround for this issue. Configure to isolate all
             GPIO pins in sleep state.
 
-endmenu  # ESP32C3-Specific
+endmenu  # ESP32H2-Specific
