esp32h2: enable more components to support esp32h2
Involved components:
 * app_trace
 * esp-tls
 * esp_adc_cal
 * esp_pm
 * esp_serial_slave_link
 * esp_timer
 * freertos
 * idf_test
 * log
 * mbedtls
 * newlib
 * perfmon
 * spi_flash
 * spiffs
 * ulp
 * unity
 * vfs

--- a/components/esp_adc_cal/CMakeLists.txt
+++ b/components/esp_adc_cal/CMakeLists.txt
@@ -14,4 +14,9 @@ elseif(${target} STREQUAL "esp32c3")
     idf_component_register(SRCS "esp_adc_cal_esp32c3.c"
                     INCLUDE_DIRS "include"
                     REQUIRES driver efuse)
+
+elseif(${target} STREQUAL "esp32h2")
+    idf_component_register(SRCS "esp_adc_cal_esp32h2.c"
+                    INCLUDE_DIRS "include"
+                    REQUIRES driver efuse)
 endif()
