--- a/components/freertos/CMakeLists.txt
+++ b/components/freertos/CMakeLists.txt
@@ -6,7 +6,8 @@ endif()
 
 idf_build_get_property(target IDF_TARGET)
 
-if(NOT "${target}" STREQUAL "esp32c3" AND NOT "${target}" STREQUAL "esp32h2")  # should test arch here not target, TODO ESP32-C3 IDF-1754
+# should test arch here not target, TODO ESP32-C3 IDF-1754
+if(NOT "${target}" STREQUAL "esp32c3" AND NOT "${target}" STREQUAL "esp32h2")
     set(srcs
         "port/xtensa/port.c"
         "port/xtensa/portasm.S"
