[cxx]: GPIO CXX wrappers, experiemental CI rule
* Wrapper class for simple GPIO interaction
  like read/write without ISRs.
* Added rule to provoke builds after changes in
  the experimental C++ component.

--- a/.gitlab/ci/rules.yml
+++ b/.gitlab/ci/rules.yml
@@ -37,6 +37,7 @@
 
 .patterns-build_components: &patterns-build_components
   - "components/**/*"
+  - "examples/cxx/experimental/experimental_cpp_component/*"
 
 .patterns-build_system: &patterns-build_system
   - "tools/cmake/**/*"
