--- a/examples/cxx/experimental/experimental_cpp_component/CMakeLists.txt
+++ b/examples/cxx/experimental/experimental_cpp_component/CMakeLists.txt
@@ -1,6 +1,7 @@
 idf_component_register(SRCS
                     "esp_exception.cpp"
                     "i2c_cxx.cpp"
+                    "gpio_cxx.cpp"
                     "esp_event_api.cpp"
                     "esp_event_cxx.cpp"
                     "esp_timer_cxx.cpp"
