ci: only run check_docs_gh_links job once per pipeline
Job simply walks all .rst files and check links. No need to
run for multiple targets/languages

--- a/tools/ci/config/build.yml
+++ b/tools/ci/config/build.yml
@@ -52,8 +52,10 @@ fast_template_app:
     BUILD_COMMAND_ARGS: "-p"
 
 check_docs_gh_links:
-  extends: .build_docs_template
+  image: $ESP_IDF_DOC_ENV_IMAGE
   stage: pre_check
+  tags:
+    - build_docs
   variables:
     SUBMODULES_TO_FETCH: "none"
   script:
